# django-coconuts

./: .addcopyright  .coveragerc  .gitignore  .travis.yml  AUTHORS  LICENSE  README  README.md  README.rst  manage.py  pyproject.toml  requirements.txt  settings.py.in  setup.py  tox.ini  urls.py
.github/workflows/: tests.yml
coconuts/: __init__.py  admin.py  davhandler.py  forms.py  models.py  notifications.py  urls.py  views.py
coconuts/fixtures/: test_users.json
coconuts/static/: Gruntfile.js  bower.json  karma.conf.js  package.json
coconuts/static/coconuts/: index.html
coconuts/static/config/: karma-unit.conf.js
coconuts/static/scripts/: lcov-to-coveralls.js
coconuts/templates/coconuts/: add_file.html  add_folder.html  base.html  crumbs.html  delete.html  folder_email.html  folder_operations.html  folder_webdav.html  forbidden.html  links.html  manage.html  photo_detail.html  photo_list.html  photos.rss  (+1 more)
coconuts/templatetags/: coconuts_tags.py
coconuts/tests/: __init__.py  settings.py  test_add.py  test_content.py  test_delete.py  test_download.py  test_exif.py  test_index.py  test_owner.py  test_path.py  test_permission.py  test_render.py  urls.py
frontend/: angular.json  eslint.config.js  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  styles.scss
templates/: 404.html  base.html
templates/registration/: logged_out.html  login.html
tests/: __init__.py  settings.py  test_add.py  test_content.py  test_delete.py  test_download.py  test_exif.py  test_index.py  test_path.py  test_permission.py  test_render.py  urls.py
(+26 files in other folders)
