[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coconuts"
description = "A simple photo sharing web application"
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [
    { name = "Jeremy Lainé", email = "jeremy.laine@m4x.org" },
]
version = "0.4.0"

[tool.coverage.run]
include = ["coconuts/*"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
    "T20",  # flake8-print
]

[tool.setuptools]
packages = ["coconuts"]
